# BayInfoTech

./: .dockerignore  Dockerfile  GetGSA Coding Test.docx  README.md  docker-compose.yml  main.py  pyproject.toml
templates/: index.html
