[project]
name = "assessment"
version = "0.1.0"
description = "GetGSA Coding Test - Document ingestion and validation service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "pytest>=7.0.0",
]
